[package]
name = "wgpu_tokio"
version = "0.12.1"
edition = "2021"
license-file = "LICENSE.txt"
repository = "https://github.com/Joatin/wgpu_tokio"
keywords = ["tokio", "wgpu", "gamedev", "async", "futures"]
categories = ["asynchronous", "game-development", "graphics", "rendering", "wasm"]
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
description = "Async bindings using tokio for wgpu"

exclude = [
    ".github/**/*",
    ".pre-commit-config.yaml",
]

[dependencies]
tokio = { version = "^1.17", features = ["rt", "rt-multi-thread"] }
wgpu = "0.12"
async-trait = "^0.1"